--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="profile">"프로필"</string>
+    <string name="record">"기록"</string>
+    <string name="community">"커뮤니티"</string>
+    <string name="more">"더보기"</string>
+    <string name="timer">"타이머"</string>
+    <string name="tutorial">"사용 설명"</string>
+    <string name="announcement">"공지사항"</string>
+    <string name="logout">"로그아웃"</string>
+
+
+
 </resources>
