--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,33 @@
 <resources>
-    <string name="app_name">Team7</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="app_name">라이프체커</string>
     <string name="profile">"프로필"</string>
     <string name="record">"기록"</string>
     <string name="community">"커뮤니티"</string>
     <string name="more">"더보기"</string>
+    <string name="squircle_discription">squircle</string>
     <string name="timer">"타이머"</string>
-    <string name="tutorial">"사용 설명"</string>
-    <string name="announcement">"공지사항"</string>
+    <string name="tutorial">"사용설명"</string>
+    <string name="notice">"공지사항"</string>
     <string name="logout">"로그아웃"</string>
+    <string name="nullUserName">사용자 이름</string>
+    <string name="nullDays">%1$s일</string>
+    <string name="correction">수정하기</string>
+    <string name="userInformWeight">몸무게: %1$.1fkg</string>
+    <string name="userInformHeight">키: %1$.1fcm </string>
 
+    <string name="logoutConfirm">"로그아웃 하시겠습니까?"</string>
+    <string name="backPressedTwice">"한 번 더 누르면 종료합니다."</string>
+    <string name="allDayText">전체</string>
+    <string name="workoutDayText">운동</string>
+    <string name="dietDayText">식단</string>
+    <string name="goalWeight">목표: %1$.1fkg</string>
+    <string name="currentWeight">오늘: %1$.1fkg (%2$s%3$.1f)</string>
+    <string name="cancel">"취소"</string>
+    <string name="inquiry">문의하기</string>
+    <string name="notice231107">[공지사항] 어플 출시</string>
+    <string name="notice231107detail">어플이 출시되었습니다!\n\n\n\n\n\n\n\\n test\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
